--- a/SQA_Boot_camp.ipynb
+++ b/SQA_Boot_camp.ipynb
@@ -6,7 +6,7 @@
       "name": "SQA_Boot_camp.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMate4qeFLu68SpwmqmeYxs",
+      "authorship_tag": "ABX9TyNFWzx5ibOZMG4cDg8g8MeH",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1925,6 +1925,386 @@
       },
       "execution_count": null,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "number = 2**31\n",
+        "print(number-1)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "1H3HQfGimQlO",
+        "outputId": "d97981b1-bc66-47ac-96d4-67f4c120efaa"
+      },
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2147483647\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Factorial of real number."
+      ],
+      "metadata": {
+        "id": "5Oaqud7V8XNZ"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "input_number = int(input(\"Enter number = \"))\n",
+        "\n",
+        "factorial = 1\n",
+        "for i in range(1, input_number+1):\n",
+        "  \n",
+        "  factorial = factorial*i\n",
+        "    \n",
+        "print(factorial)"
+      ],
+      "metadata": {
+        "id": "zMBAMeujqTat"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Celcious to Faren_Hight"
+      ],
+      "metadata": {
+        "id": "cqkeBkQp8R7j"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "centigret = eval(input(\"Enter number = \"))\n",
+        "faren_hight = centigret*(9/5)+32\n",
+        "faren_hight = round(faren_hight, 2)\n",
+        "print(faren_hight,'`f')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_Woq09NkqWjw",
+        "outputId": "991ab279-69d4-4cf2-c4de-1613bf1c6732"
+      },
+      "execution_count": 64,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter number = 1.9\n",
+            "35.42 `f\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Faren_Hight to Celciuos"
+      ],
+      "metadata": {
+        "id": "-737XWPi8DrE"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "      Faregn_Hight = eval(input(\"Enter number = \"))\n",
+        "      centigrets= (Faregn_Hight-32)*(5/9)\n",
+        "      centigrets = round(centigrets, 2)\n",
+        "      print(centigrets,'`C')"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "L7bSqGpFsqJL",
+        "outputId": "813d15dc-2b9b-4beb-dc51-3aa0fe4391a4"
+      },
+      "execution_count": 68,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter number = 12.1212\n",
+            "-11.04 `C\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Faren_Hight and Celcius with choice."
+      ],
+      "metadata": {
+        "id": "xnYj4vHN74gh"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "choice = int(input(\"Enter number = \"))\n",
+        "\n",
+        "input_value = eval(input(\"Enter value =\"))\n",
+        "\n",
+        "if(choice == 1):\n",
+        "  faren_hight = input_value*(9/5)+32\n",
+        "  faren_hight = round(faren_hight, 2)\n",
+        "  print(faren_hight, '`F')\n",
+        "else: \n",
+        "  cel= (input_value-32)*(5/9)\n",
+        "  cel = round(cel)\n",
+        "  print(cel, '`C')\n",
+        "\n",
+        "\n",
+        "    \n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ArxfHnIQuPLo",
+        "outputId": "7906205c-d3ba-4b60-8d6c-08105f27e02d"
+      },
+      "execution_count": 90,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter number = 3\n",
+            "Enter value =34\n",
+            "1 `C\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Distance converter (km to miles) => 1km = 0.62mile"
+      ],
+      "metadata": {
+        "id": "LYpvL53294B4"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ONEKM = 0.62 #miles\n",
+        "error_msg = \"Please enter a valid input..!\"\n",
+        "user_choice = input(\"Enter choice for KM to Miles conversion and vice versa : \")\n",
+        "if user_choice.isdigit():\n",
+        "    if int(user_choice) == 1:\n",
+        "        user_input_in_KM = input(\"Enter distance in KM : \")\n",
+        "        if user_input_in_KM.isdigit():\n",
+        "          print(\"The distance in miles is : \", float(user_input_in_KM)*ONEKM)\n",
+        "        else:\n",
+        "          print(error_msg)\n",
+        "    elif int(user_choice) ==2:\n",
+        "          user_input_in_MILES = input(\"Enter distance in Miles : \")\n",
+        "          if user_input_in_MILES.isdigit():\n",
+        "             print(\"The distance is in KM :\", float(user_input_in_MILES)/ONEKM)\n",
+        "          else:\n",
+        "            print(error_msg)\n",
+        "    else:\n",
+        "      print(error_msg)\n",
+        "  \n",
+        "else:\n",
+        "    print(error_msg)         "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hg6_zGB9xOA6",
+        "outputId": "168bf197-806d-42c7-da5b-90ecafe5213f"
+      },
+      "execution_count": 57,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter choice for KM to Miles conversion and vice versa : 1\n",
+            "Enter distance in KM : 300.00012\n",
+            "Please enter a valid input..!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "kilometer = eval(input(\"Enter Value = \"))\n",
+        "if not kilometer.isdigit():\n",
+        "    print(\"This is not didgits..!\")\n",
+        "elif(type(kilometer)!=str):\n",
+        "   Miles = kilometer*(0.62)\n",
+        "   Miles = round(Miles, 2)\n",
+        "   print(Miles,'miles')\n",
+        "else:\n",
+        "       print(\"invalid values..!\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 287
+        },
+        "id": "-52WrkPVD7eg",
+        "outputId": "f57cdc93-b578-4131-c00d-73f513a56b6b"
+      },
+      "execution_count": 117,
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter Value = this\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-117-6eacb712d703>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mkilometer\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0meval\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Enter Value = \"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0mkilometer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0misdigit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"This is not didgits..!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32melif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mkilometer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m!=\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m    \u001b[0mMiles\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkilometer\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.62\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<string>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'this' is not defined"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "ONEDollor = 208 #rupees\n",
+        "error_msg = \"Please enter a valid input..!\"\n",
+        "user_choice = input(\"Enter choice for Dollor to Rupees conversion and vice versa : \")\n",
+        "if user_choice.isdigit():\n",
+        "    if int(user_choice) == 1:\n",
+        "        user_input_in_Dollor = input(\"Enter Currency in Dollor : \")\n",
+        "        if user_input_in_Dollor.isdigit():\n",
+        "          print(\"The currencyin rupees is : \", float(user_input_in_Dollor)*ONEDollor)\n",
+        "        else:\n",
+        "          print(error_msg)\n",
+        "    elif int(user_choice) ==2:\n",
+        "          user_input_in_Rupees = input(\"Enter currency in rupees : \")\n",
+        "          if user_input_in_Rupees.isdigit():\n",
+        "             print(\"The currency in Dollor is :\", float(user_input_in_Rupees)/ONEDollor)\n",
+        "          else:\n",
+        "            print(error_msg)\n",
+        "    else:\n",
+        "      print(error_msg)\n",
+        "  \n",
+        "else:\n",
+        "    print(error_msg)       "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xYNPFJeTBEwp",
+        "outputId": "7496ea03-e649-473d-d122-9832dd8e5083"
+      },
+      "execution_count": 60,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter choice for Dollor to Rupees conversion and vice versa : 1\n",
+            "Enter Currency in Dollor : 1.9\n",
+            "Please enter a valid input..!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "error_msg = \"Please enter a valid input..!\"\n",
+        "user_choice = input(\"Enter choice for Currency conversion and vice versa : \")\n",
+        "if user_choice.isdigit():\n",
+        "    if int(user_choice) == 1:\n",
+        "        user_input_in_Cents = input(\"Enter Currency in Cents : \")\n",
+        "        if user_input_in_Cents.isdigit():\n",
+        "          print(\"The currency in Dollor is : $\", float(user_input_in_Cents)*(0.01))\n",
+        "        else:\n",
+        "          print(error_msg)\n",
+        "    elif int(user_choice) ==2:\n",
+        "          user_input_in_Nikel = input(\"Enter currency in Nickel : \")\n",
+        "          if user_input_in_Nikel.isdigit():\n",
+        "             print(\"The currency in Dollor is : $\", float(user_input_in_Nikel)*0.05)\n",
+        "          else:\n",
+        "            print(error_msg)\n",
+        "    elif int(user_choice) == 3:\n",
+        "          user_input_in_Dime = input(\"Enter Currency in Dime : \")\n",
+        "          if user_input_in_Dime.isdigit():\n",
+        "            print(\"The currency in Dollor is : $\", float(user_input_in_Dime)*(0.10))\n",
+        "          else:\n",
+        "            print(error_msg)\n",
+        "       \n",
+        "    elif int(user_choice) ==4:\n",
+        "          user_input_in_Quarter = input(\"Enter currency in Quarter : \")\n",
+        "          if user_input_in_Quarter.isdigit():\n",
+        "             print(\"The currency in Dollor is : $\", float(user_input_in_Quarter)*(0.25))\n",
+        "          else:\n",
+        "            print(error_msg)\n",
+        "      ##\n",
+        "    elif int(user_choice) ==5:\n",
+        "          #2\n",
+        "          \n",
+        "          print(\"Total Dollor are : $\", ((float(user_input_in_Cents)*(0.01))+(float(user_input_in_Quarter)*(0.25))\n",
+        "                                         +(float(user_input_in_Nikel)*0.05)+(float(user_input_in_Dime)*(0.10)))\n",
+        "          )\n",
+        "          \n",
+        "    else:\n",
+        "      print(error_msg)\n",
+        "  \n",
+        "else:\n",
+        "    print(error_msg)     "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "CuhgUqnmfiln",
+        "outputId": "7624c7db-703d-40e3-ccef-ace34553c052"
+      },
+      "execution_count": 89,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Enter choice for Currency conversion and vice versa : 1\n",
+            "Enter Currency in Cents : 324\n",
+            "The currency in Dollor is : $ 3.24\n"
+          ]
+        }
+      ]
     }
   ]
 }
