--- a/SQA_Boot_camp.ipynb
+++ b/SQA_Boot_camp.ipynb
@@ -25,7 +25,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/imymalik/sqa_boot_camp/blob/main/SQA_Boot_camp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/imymalik/sqa_boot_camp/blob/imymalik%2Fsqa_boot_camp%2Fsecond_week/SQA_Boot_camp.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
